alteração do modo que ele está fazendo a transi

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 ﻿NEXT_PUBLIC_SITE_URL=https://starkelosung.com
+NEXT_PUBLIC_SITE_MODE=standard
+NEXT_PUBLIC_SHOW_MODE_TOGGLE=true
 RESEND_API_KEY=
 TURNSTILE_SECRET_KEY=
 TURNSTILE_SITE_KEY=
